Finish /issues yaml
